--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.5
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
